# MultiGPUCluster

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
.sqlx/: query-07238a10dd2271f582d1bec604c53c32d849f37568166822bbab84d609e46da0.json  query-10f1a42619347f95cd3f90bcb6c49e2866bbd93482c5a1d3874d1eec837dd148.json  query-12b66e5c5c4bf8c0be6cedcba0b4f58b18d266556cc497ca909506861705accb.json  query-13caef504066f747e5afd4a0f1afff4d735dbb10b44061d9f69f9ca2f918ce93.json  query-1d99f752a4288dc7213d4aeb4b84dd5a4c74c15a02fa7eb97f85b091c98657cc.json  query-21c0204e4e303cb8352a6b99330e5e7f1b3a1b5bd91755cb67217f3cfeb84d79.json  query-306a5f106041f723ffcf493b2799f915f4befa7b60f64c1b52ef3b90bff1b83c.json  query-3265968be1370416ad760f0ddf5cbda6ee3500f3f4106a958a6fc55dc0eb14c4.json  query-452393fde9d9db953d697c150a4c8cfa6b90d1d15f129b34ff9b518ecfccfc71.json  query-487a2aeec138dff9fae430d3167b2aadafc6e3a5566336f81d95e8208a0c1269.json  query-56dbb870bc9130d4034593408d521ac20a3096902f5329a682824c206736963d.json  query-5743646fce68f91611ba2301891d47137af263784b019b89d771ef96b7829142.json  query-614974f4eeffcb1707b20902b5cd6fe27f463aea4c990754b7d5d8b1dbec9a20.json  query-62ab8426a8606d973cdc48b2ede2a521f910fd1fd78a73afcf590c1b127ae117.json  query-62b4b6ec8a295c245e3132941a9fb1da9adb80cacfab5d3261408c9bc0f71b01.json  query-62b7c38f023c36da21205b02f2cd890f9c243ca687c919da45e95ed77389aa9e.json  query-64f16d1615883789aac493fed02c3b4f2c648eedf5612c294b66de593cd230af.json  query-6724b2ef0c7f7370b3b8d8606dcf56c88fae4320251ee9b13660ce52e15dc00f.json  query-683cabc7fbb95c7f9de34285109a089ac475383d2e8bbf5ca2f074d87fb62228.json  query-715660b49fb4ab33e154065a152c78078bbc9b33400bccad6f472a83f5d929d5.json  query-74ef2aea614fec55220e44e8e5fb605e94e00587e44e5418d426b2c11590d7ba.json  query-781d93c73471ca923e3a7e6463905f94ca849cf87fe8ef294c26d698814c1642.json  query-7fdb5cf8a7f1f7ad6a8a505d005b451638926a79fe72671ed753f664a356e5f2.json  query-83048c4c331e799b9966a31ec31435ffb293b1bce913b335efa137a4d04b35c8.json  query-85b95c13a07de6c41c47b6fc800e0756050363a8769c5fd925b378a096ee14f4.json  query-8c26081b24ebd419776588ef8e5c5644d8e5fce79be8409679189a8964373a41.json  query-8de604f5b50d7246c0e2cb0f4ad2751fa21a91a50580c416549a2f04c43cb09e.json  query-975c4af672ace950c64e182620ffca60a2eb6800cd9cd4e8358dbbd6183489b5.json  query-9bf7a7c980cc920b62a9352fd1f01ef4995675fc91dbefb5be9e672ffadc2feb.json  query-9c27d166a4cf268ef3c344a78b58e32d225759c0851d606283e5ff0bed98aea4.json  query-9d898535f83dc82f1c8cfdde2a2c71c99328313908d1205121e1c1926d59c638.json  query-a655fd858bfab9efeecd0bdbdc1e89df978b186fe860820228899e8b6a5378cf.json  query-a7148b144aac8c78495a4649c97b243272643195f35129274f25b7a44052ea63.json  query-b2d9e9a66bdadda2a1c093973be3a9af3c969fd0aabf490c7f9381267e5cbc2f.json  query-ba08ae26513592aa86c997804ab34b67315d9f714d03c3269d35cd3080b6db60.json  query-bce15a6583bd417c68f4f420674648c9478c3076f42344ddcfd95a16a6653a8e.json  query-cabd3aa7eb35ad7f55ff8fe5049136d24c87385b67dfe8ebb5d289626b4763c4.json  query-cb8f80cd0fff909c7a1ada4fb65fa5dd3d0a66d96474c7a8c07269be845bd242.json  query-d71df3cd372e5aa18cd2c8bed0e281e929d0d7e61e4e9f6d191b9cb3a3365803.json  query-d788c04495afed8956b876096b353bfcc1f874ec610d0f291f54c00b5b805173.json  (+13 more)
backend/: .env.example  Caddyfile  docker-compose.yml
backend/wg-hub/config/: config.yaml
bootstrapper/: Cargo.toml
bootstrapper/src/: docker.rs  enroll.rs  main.rs  native.rs  preflight.rs  service.rs  state.rs
cli/: Cargo.toml
cli/src/: main.rs
cpp/cuda-kernels/: CMakeLists.txt
cpp/cuda-kernels/src/: placeholder.cu
cpp/llama-rpc-ext/: CMakeLists.txt
cpp/llama-rpc-ext/src/: main.cpp
crates/ca/: Cargo.toml
crates/ca/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: clients.rs  error.rs  ids.rs  lib.rs  nodes.rs  ports.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: config.rs  heartbeat.rs  lib.rs  main.rs  registry.rs  server.rs  service.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: admin_ui.html  config.rs  lib.rs  main.rs  middleware.rs  proxy.rs  routes.rs  server.rs  state.rs
crates/gateway/src/ui/: admin.css  admin.html  admin.js
crates/mgmt-backend/: Cargo.toml
crates/mgmt-backend/migrations/: 0001_init.sql  0002_api_keys.sql  0003_settings_and_models.sql  0004_hf_models.sql  0005_inference_log.sql
crates/mgmt-backend/src/: api_error.rs  audit.rs  auth.rs  ca_store.rs  config.rs  db.rs  enroll.rs  handlers.rs  lib.rs  main.rs  nodes.rs  reconciler.rs  server.rs  state.rs  users.rs
crates/mgmt-backend/src/handlers/: api_keys.rs  audit.rs  enroll.rs  enroll_token.rs  inference.rs  models.rs  nodes.rs  settings.rs
crates/nccl-wrapper/: Cargo.toml
crates/nccl-wrapper/src/: lib.rs
crates/openai-api/: Cargo.toml
crates/openai-api/src/: lib.rs  main.rs  schema.rs  server.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: coordinator.proto  management.proto  node.proto
crates/proto/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: compute_group.rs  lib.rs  placement.rs  precision.rs
crates/sysinfo/: Cargo.toml
crates/sysinfo/src/: fingerprint.rs  gpu.rs  gpu_metal.rs  inventory.rs  lib.rs  network.rs  os.rs
crates/worker/: Cargo.toml
crates/worker/src/: agent.rs  config.rs  control_server.rs  heartbeat.rs  identity.rs  inference_server.rs  lib.rs  main.rs  model_downloader.rs  rpc_backend.rs
dashboard/: package.json
docker/: .dockerignore  coordinator.Dockerfile  gateway.Dockerfile  mgmt.Dockerfile  openai-api.Dockerfile  worker.Dockerfile
docs/: PLAN.md
scripts/: dev-down.sh  dev-up.sh  download-model.sh
