[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/common",
    "crates/sysinfo",
    "crates/ca",
    "crates/gateway",
    "crates/coordinator",
    "crates/scheduler",
    "crates/mgmt-backend",
    "crates/openai-api",
    "crates/worker",
    "crates/nccl-wrapper",
    "bootstrapper",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/dzurmuehle/MultiGPUCluster"
authors = ["Daniel Zurmühle <dzurmuehle@gmail.com>"]

[workspace.dependencies]
# Internal
gpucluster-proto      = { path = "crates/proto" }
gpucluster-common     = { path = "crates/common" }
gpucluster-sysinfo    = { path = "crates/sysinfo" }
gpucluster-ca         = { path = "crates/ca" }
gpucluster-scheduler  = { path = "crates/scheduler" }
gpucluster-coordinator = { path = "crates/coordinator" }
gpucluster-gateway    = { path = "crates/gateway" }
gpucluster-mgmt       = { path = "crates/mgmt-backend" }
gpucluster-openai-api = { path = "crates/openai-api" }
gpucluster-worker     = { path = "crates/worker" }
gpucluster-nccl       = { path = "crates/nccl-wrapper" }

# Async runtime
tokio       = { version = "1.40", features = ["full"] }
tokio-util  = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures     = "0.3"

# RPC / HTTP
tonic       = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build = "0.12"
prost       = "0.13"
prost-types = "0.13"
axum        = { version = "0.8", features = ["ws", "macros"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "cors", "limit", "timeout", "compression-gzip", "set-header"] }
hyper       = "1"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serde / config
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
toml        = "0.8"

# Errors / logging
anyhow      = "1"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# Database
sqlx        = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "macros"] }

# Crypto / Auth
rustls      = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen       = "0.13"
x509-parser = "0.16"
ring        = "0.17"
ed25519-dalek = "2"
argon2      = "0.5"
jsonwebtoken = "9"
base64      = "0.22"

# Identifiers / time
uuid        = { version = "1", features = ["v4", "v7", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
time        = "0.3"

# CLI / config
clap        = { version = "4", features = ["derive", "env"] }
config      = "0.14"
dotenvy     = "0.15"

# System info
nvml-wrapper = "0.10"
sysinfo     = "0.32"
mac_address = "1"

# Misc
once_cell   = "1"
parking_lot = "0.12"
dashmap     = "6"
governor    = "0.7"  # rate limiting
ipnet       = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0

[profile.bench]
opt-level = 3
lto = "thin"
