[package]
name = "gpucluster-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpucluster-agent"
path = "src/main.rs"

[dependencies]
gpucluster-common.workspace = true
gpucluster-sysinfo.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
dotenvy.workspace = true

reqwest.workspace = true
uuid.workspace = true
base64.workspace = true
ring.workspace = true
