[package]
name = "gpucluster-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpucluster"
path = "src/main.rs"

[dependencies]
gpucluster-common.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
reqwest.workspace = true
chrono.workspace = true
