[package]
name = "gpucluster-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# clients module — typed HTTP wrappers for cluster-internal calls.
reqwest.workspace = true

# nodes module — serde-derived view of pb::NodeInfo for the JSON wire format.
gpucluster-proto.workspace = true
