[package]
name = "gpucluster-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpucluster-coordinator"
path = "src/main.rs"

[dependencies]
gpucluster-common.workspace = true
gpucluster-proto.workspace = true
gpucluster-scheduler.workspace = true

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true
futures.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
dotenvy.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
