[package]
name = "gpucluster-mgmt-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpucluster-mgmt"
path = "src/main.rs"

[dependencies]
gpucluster-common.workspace = true
gpucluster-proto.workspace = true
gpucluster-ca.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
dotenvy.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

argon2.workspace = true
jsonwebtoken.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
ring.workspace = true
rcgen.workspace = true
