[package]
name = "gpucluster-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpucluster-common.workspace = true
gpucluster-proto.workspace = true

serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
