[package]
name = "gpucluster-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gpucluster-worker"
path = "src/main.rs"

[dependencies]
gpucluster-common.workspace = true
gpucluster-proto.workspace = true
gpucluster-sysinfo.workspace = true

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
dotenvy.workspace = true

uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
